[Game][Skill] Defined form

--- a/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
@@ -5,6 +5,7 @@
 {% block title %}{{ parent() }} - {{ 'character.title'|trans }} - {{ character }} - {{ 'character.skills'|trans }}{% endblock %}
 
 {% block content %}
+{{ form(form) }}
 <table class="table table-striped">
     <thead>
         <tr>
