--- a/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
@@ -12,7 +12,8 @@
             <tr>
                 <th>{{ 'skill.ability'|trans }}</th>
                 <th>{{ 'skill.name'|trans }}</th>
-                <th style="text-right">&nbsp;</th>
+                <th class="text-right">{{ 'skill.price'|trans }}</th>
+                <th class="text-right">&nbsp;</th>
             </tr>
         </thead>
         <tbody>
@@ -27,13 +28,14 @@
                     {% endif %}
                 </td>
                 <td>{{ skill }}</td>
-                <td style="text-right">
+                <td class="text-right">{{ characterSkill.vars.value.getPrice() }}</td>
+                <td class="text-right">
                     {{ form_widget(characterSkill.level) }}
                 </td>
             </tr>
         {% else %}
             <tr class="warning">
-                <td colspan="3">{{ 'skill.empty'|trans }}</td>
+                <td colspan="4">{{ 'skill.empty'|trans }}</td>
             </tr>
         {% endfor %}
         </tbody>
