[Game] Validate experience to buy skills

--- a/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
@@ -34,8 +34,8 @@
                 <td>{{ skill }}</td>
                 <td class="text-right">{{ characterSkill.vars.value.getPrice() }}</td>
                 <td class="text-right">
-                    {{ form_widget(characterSkill.level) }}
-                    {{ form_errors(characterSkill.level) }}
+                    {{ form_widget(characterSkill.newLevel) }}
+                    {{ form_errors(characterSkill.newLevel) }}
                 </td>
             </tr>
         {% else %}
