[Game] Show available experience

--- a/src/Argon/GameBundle/Resources/views/Admin/Character/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Character/index.html.twig
@@ -29,7 +29,7 @@
                 {% endif %}
                 <abbr title="{{ character.player.username }}">{{ character.player.name|default(character.player.username) }}</abbr> /
                 {{ character.name }} (
-                    <a href="{{ path('admin_character_experience', {'id': character.id}) }}"><span class="glyphicon glyphicon-signal"></span> {{ character.experience }}</a>
+                    <a href="{{ path('admin_character_experience', {'id': character.id}) }}"><span class="glyphicon glyphicon-signal"></span> {{ character.availableExperience }}/{{ character.experience }}</a>
                 )<br>
                 {{ character.race }}
             </td>
