--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -70,7 +70,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="3" class="text-right"><strong>{{ character.experience }}</strong></td>
+                <td colspan="3" class="text-right"><strong>{{ character.availableExperience }}</strong></td>
             </tr>
         </tfoot>
     </table>
