--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -75,4 +75,38 @@
         </tfoot>
     </table>
 </div>
+<div class="panel panel-default">
+    <div class="panel-heading">{{ 'character.skills'|trans }}</div>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>&nbsp;</th>
+                <th>{{ 'skill.name'|trans }}</th>
+                <th class="text-right">{{ 'skill.level'|trans }}</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for skill in character.skills %}
+            <tr>
+                <td>
+                    {% if skill.skill.abilityCode %}
+                        <abbr title="{{ ('character_ability.types.' ~ skill.skill.abilityCode)|trans({}, 'forms') }} ({{ skill.skill.abilityCode }})">
+                            <span class="glyphicon glyphicon-asterisk"></span>
+                        </abbr>
+                    {% else %}
+                        <abbr title="{{ 'skill.ability_empty'|trans }}">
+                            <span class="glyphicon glyphicon-asterisk"></span>
+                        </abbr>
+                    {% endif %}
+                </td>
+                <td>{{ skill.skill }}</td>
+                <td class="text-right">{{ skill.level }}</td>
+            </tr>
+        {% else %}
+            <tr class="warning">
+                <td colspan="3">{{ 'character_skill.empty'|trans }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
