--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -4,7 +4,9 @@
 
 {% block stylesheets %}
 {% spaceless %}
-  <link href="{{ asset('/css/bootstrap.css') }}" rel="stylesheet" media="screen">
+{% stylesheets 'css/bootstrap.css' filter='?yui_css' %}
+    <link href="{{ asset_url }}" rel="stylesheet" type="text/css" media="screen" />
+{% endstylesheets %}
   {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
 {% endspaceless %}
 
@@ -48,11 +50,10 @@
   </div>
 {% endblock %}
 
-{#
 {% block javascripts %}
-    <!-- jQuery (necessary for Bootstraps JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all JavaScripts, compiled by Assetic -->
-    <script src="{{ asset('/js/bootstrap.js') }}"></script>
+{% spaceless %}
+{% javascripts 'js/jquery.js' 'js/bootstrap.js' filter='?closure' %}
+    <script src="{{ asset_url }}"></script>
+{% endjavascripts %}
+{% endspaceless %}
 {% endblock %}
- #}
