--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -52,7 +52,7 @@
 
 {% block javascripts %}
 {% spaceless %}
-{% javascripts 'js/jquery.js' 'js/bootstrap.js' filter='?closure' %}
+{% javascripts 'js/jquery.js' 'js/jqueryui.js' 'js/bootstrap.js' filter='?closure' %}
     <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
 {% endspaceless %}
