[Homepage] Add jumbotrom

--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -4,5 +4,11 @@
 {% block title %}{{ parent() }} - {{ 'homepage.title'|trans }}{% endblock %}
 
 {% block content %}
-Welcome!
+{% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+<div class="jumbotron">
+  <h1 style="font-size: 400%;">{{ 'homepage.jumbotron.title'|trans }}</h1>
+  <a href="#" class="btn btn-success btn-lg pull-right">{{ 'homepage.register'|trans }}</a>
+  <p>{{ 'homepage.jumbotron.description'|trans }}</p>
+</div>
+{% endif %}
 {% endblock %}
