[News] Add admin new and view

--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/index.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/index.html.twig
@@ -6,27 +6,34 @@
 
 {% block content %}
 <ol class="breadcrumb">
-    <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
-    <li class="active">{{ 'news.posts'|trans }}</li>
+  <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
+  <li class="active">{{ 'news.posts'|trans }}</li>
 </ol>
 <table class="table table-striped">
-    <thead>
-        <tr>
-            <th>{{ 'news.post.title'|trans({}, 'admin') }}</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for post in entities %}
-        <tr>
-            <td>
-            {#<a href="{{ path('admin_news_view', {'slug': post.slug}) }}">{{ post }}</a>#}
-            </td>
-        </tr>
-    {% else %}
-        <tr class="warning">
-            <td colspan="1">{{ 'news.post.empty'|trans({}, 'admin') }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
+  <thead>
+    <tr>
+      <th>{{ 'news.post.title'|trans({}, 'admin') }}</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for post in entities %}
+      <tr>
+        <td>
+          <a href="{{ path('admin_news_view', {'slug': post.slug}) }}">{{ post }}</a>
+        </td>
+      </tr>
+  {% else %}
+    <tr class="warning">
+      <td colspan="1">{{ 'news.post.empty'|trans({}, 'admin') }}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="1">
+        <a href="{{ path('admin_news_new') }}" class="btn btn-default">{{ 'news.actions.new'|trans }}</a>
+      </td>
+    </tr>
+  </tfoot>
 </table>
 {% endblock %}
