--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
@@ -2,7 +2,7 @@
 {% extends 'ArgonWebBundle::Admin/layout.html.twig' %}
 {% trans_default_domain 'admin' %}
 
-{% block title %}{{ parent() }} - {{ 'news.posts'|trans }} {{ post }}{% endblock %}
+{% block title %}{{ parent() }} - {{ 'news.posts'|trans }} - {{ post }}{% endblock %}
 
 {% block content %}
 <ol class="breadcrumb">
@@ -21,7 +21,7 @@
     <div class="col-sm-10">
       <p class="form-control-static">
       {% if post.isPublished %}
-        {{ 'news.post.published_at'|trans({'%date%': post.publishedAt}) }}
+        {{ 'news.post.published_at'|trans({'%date%': post.publishedAt|date}) }}
       {% else %}
         {{ 'news.post.draft'|trans }}
       {% endif %}
