--- a/src/Argon/GameBundle/Resources/views/Character/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/index.html.twig
@@ -16,14 +16,14 @@
     {% for character in entities %}
         <tr>
             <td>
-                {{ character.game.info.fullname }} / <a href="{{ path('character_view', {'id': character.id}) }}">{{ character.name }}</a> (
+                {{ character.game.info.fullname }} / <a href="{{ path('character_view', {'slug': character.slug}) }}">{{ character.name }}</a> (
                     <span class="glyphicon glyphicon-signal"></span> {{ character.availableExperience }}/{{ character.experience }}
                 )<br>
                 {{ character.race }}
             </td>
             <td class="text-right">
-                <a href="{{ path('homepage', {'_switch': character.slug}) }}">{{ 'character.switch'|trans }} <span class="glyphicon glyphicon-log-in"></span></a>
-                <a href="{{ path('character_skills', {'id': character.id}) }}">{{ 'character.skills'|trans }} <span class="glyphicon glyphicon-screenshot"></span></a>
+                <a href="{{ path('homepage', {'_switch': character.slug}) }}" class="btn btn-link">{{ 'character.switch'|trans }} <span class="glyphicon glyphicon-log-in"></span></a>
+                <a href="{{ path('character_skills', {'slug': character.slug}) }}" class="btn btn-link">{{ 'character.skills'|trans }} <span class="glyphicon glyphicon-screenshot"></span></a>
             </td>
         </tr>
     {% else %}
