--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -11,4 +11,5 @@
   <p>{{ 'homepage.jumbotron.description'|trans }}</p>
 </div>
 {% endif %}
+{{ render(controller('ArgonNewsBundle:Block:latest')) }}
 {% endblock %}
