--- a/src/Argon/WebBundle/Resources/views/sidebar.html.twig
+++ b/src/Argon/WebBundle/Resources/views/sidebar.html.twig
@@ -48,5 +48,8 @@
       {{ 'sidebar.player.hello'|trans({'%name%': app.user.player.username}) }}
       {{ 'sidebar.character.hello'|trans({'%name%': app.user.name}) }}
     </p>
+    <div class="list-group">
+      <a href="{{ path('fos_message_inbox') }}" class="list-group-item">{{ 'sidebar.character.inbox'|trans }} <span class="badge pull-right">{{ fos_message_nb_unread() }}</span></a>
+    </div>
   {% endif %}
 {% endif %}
