--- a/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/skills.html.twig
@@ -13,7 +13,7 @@
                 <th>&nbsp;</th>
                 <th>{{ 'skill.name'|trans }}</th>
                 <th class="text-right">{{ 'skill.level'|trans }}</th>
-                <th class="text-right">&nbsp;</th>
+                <th>&nbsp;</th>
                 <th class="text-right">{{ 'skill.price'|trans }}</th>
             </tr>
         </thead>
@@ -33,9 +33,9 @@
                     {% endif %}
                 </td>
                 <td>{{ skill }}</td>
-                <td class="text-right">{{ characterSkill.vars.value.level }}</td>
-                <td class="text-right">
-                    {{ form_widget(characterSkill.newLevel) }}
+                <td class="text-right"><span id="{{ skill.slug }}_level">{{ characterSkill.vars.value.level }}</span></td>
+                <td>
+                    {{ form_widget(characterSkill.newLevel, {'attr': {'data-level': characterSkill.vars.value.level|default(0), 'data-max': skill.max|default(-1)}}) }}
                     {{ form_errors(characterSkill.newLevel) }}
                 </td>
                 <td class="text-right">{{ characterSkill.vars.value.price }}</td>
@@ -49,4 +49,32 @@
     </table>
     {{ form_rest(form) }}
 {{ form_end(form) }}
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+<script type="text/javascript">
+    $.fn.skillLevel = function() {
+        return this.hide().each(function() {
+            var element = $(this);
+
+            var level = element.attr('data-level');
+            var max   = element.attr('data-max');
+
+            var up = $('<a href="#"><span class="glyphicon glyphicon-chevron-up"></span></a>').click(function() {
+                //
+            });
+
+            var down = $('<a href="#"><span class="glyphicon glyphicon-chevron-down"></span></a>');
+
+            element.parent()
+                .append(up)
+                .append(down)
+            ;
+        });
+    };
+    $(function() {
+        $('input[type="number"]').skillLevel();
+    });
+</script>
 {% endblock %}
