--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
@@ -41,4 +41,10 @@
     </div>
   </div>
 </div>
+<ul class="nav nav-pills pull-right">
+  {% if not post.isPublished %}
+    <li><a href="{{ path('admin_news_publish', {'slug': post.slug}) }}">{{ 'news.actions.publish'|trans }}</a></li>
+  {% endif %}
+  <li><a href="{{ path('admin_news_edit', {'slug': post.slug}) }}">{{ 'news.actions.edit'|trans }}</a></li>
+</ul>
 {% endblock %}
