[Style] Use variables.less to include styles

--- a/app/Resources/less/variables.less
+++ b/app/Resources/less/variables.less
@@ -1,6 +1,9 @@
 /*!
- * Argonbook Variables
+ * Argonbook
  */
 
 // Import the original one and overide only the desire ones.
 @import "../../../vendor/twbs/bootstrap/less/variables.less";
+
+// ArgonBook
+@import "argonbook.less";
