[News] Confirm publish

--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/publish.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/publish.html.twig
@@ -11,5 +11,6 @@
   <li><a href="{{ path('admin_news_view', {'slug': post.slug}) }}">{{ post }}</a></li>
   <li class="active">{{ 'news.actions.publish'|trans }}</li>
 </ol>
+<div class="alert alert-warning">{{ 'news.post.publish_confirm'|trans({'%post%': post}) }}</div>
 {{ form(form) }}
 {% endblock %}
