[Game] Story Confirm

--- a/src/Argon/GameBundle/Resources/views/Admin/Character/confirmStory.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Character/confirmStory.html.twig
@@ -11,4 +11,6 @@
     <li>{{ character.name }}</li>
     <li class="active">{{ 'character.actions.confirm_story'|trans }}</li>
 </ol>
+{{ include('ArgonGameBundle:Character\\Partial:story.html.twig', {'character': character}) }}
+{{ form(form) }}
 {% endblock %}
